--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -49,6 +49,8 @@
   <!-- PDF.js and Charts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.3/echarts.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 
   <!-- Template Main CSS & JS -->
   <link href="{% static 'assets/css/style.css'%}" rel="stylesheet">
