--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -86,7 +86,7 @@
             <ul id="production-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                 <li><a href="{% url 'facility_list'%}"><i class="bi bi-building-gear"></i> Facilities</a></li>
                 <li><a href="{% url 'line_list'%}"><i class="bi bi-cpu"></i> Production Lines</a></li>
-                <li><a href="#"><i class="bi bi-collection"></i> Batches</a></li>
+                <li><a href="{% url 'batch_list'%}"><i class="bi bi-collection"></i> Batches</a></li>
                 <li><a href="#"><i class="bi bi-tools"></i> Maintenance</a></li>
                 <li><a href="#"><i class="bi bi-clock-history"></i> Downtime Tracking</a></li>
             </ul>
