--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -87,7 +87,7 @@
                 <li><a href="{% url 'facility_list'%}"><i class="bi bi-building-gear"></i> Facilities</a></li>
                 <li><a href="{% url 'line_list'%}"><i class="bi bi-cpu"></i> Production Lines</a></li>
                 <li><a href="{% url 'batch_list'%}"><i class="bi bi-collection"></i> Batches</a></li>
-                <li><a href="#"><i class="bi bi-tools"></i> Maintenance</a></li>
+                <li><a href="{% url 'maintenance_dashboard'%}"><i class="bi bi-tools"></i> Maintenance</a></li>
                 <li><a href="#"><i class="bi bi-clock-history"></i> Downtime Tracking</a></li>
             </ul>
         </li>
