--- a/templates/maintenance/calendar.html
+++ b/templates/maintenance/calendar.html
@@ -22,23 +22,6 @@
         </div>
     </div>
 
-    <!-- Calendar Navigation -->
-    <div class="row mb-3">
-        <div class="col-12">
-            <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
-                <label class="btn btn-outline-danger active">
-                    <input type="radio" name="view" autocomplete="off" checked> Month
-                </label>
-                <label class="btn btn-outline-danger">
-                    <input type="radio" name="view" autocomplete="off"> Week
-                </label>
-                <label class="btn btn-outline-danger">
-                    <input type="radio" name="view" autocomplete="off"> Day
-                </label>
-            </div>
-        </div>
-    </div>
-
     <!-- Calendar Grid -->
     <div class="card shadow mb-4">
         <div class="card-header py-3" style="background-color: #ED1C24;">
@@ -110,16 +93,16 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-4 mb-2">
-                            <span class="badge badge-danger p-2 w-100">Scheduled</span>
+                            <span class="badge bg-danger p-2 w-100">Scheduled</span>
                         </div>
                         <div class="col-4 mb-2">
-                            <span class="badge badge-warning p-2 w-100">In Progress</span>
+                            <span class="badge bg-warning p-2 w-100">In Progress</span>
                         </div>
                         <div class="col-4 mb-2">
-                            <span class="badge badge-success p-2 w-100">Completed</span>
+                            <span class="badge bg-success p-2 w-100">Completed</span>
                         </div>
                         <div class="col-4 mb-2">
-                            <span class="badge badge-secondary p-2 w-100">Other Month</span>
+                            <span class="badge bg-secondary p-2 w-100">Other Month</span>
                         </div>
                         <div class="col-4 mb-2">
                             <span class="badge" style="background-color: #ED1C24; color: white;" class="p-2 w-100">Weekend</span>
