--- a/templates/maintenance/dashboard.html
+++ b/templates/maintenance/dashboard.html
@@ -196,6 +196,9 @@
                     </div>
                 </div>
             </div>
+            <a href="{% url 'maintenance_list' %}" class="btn btn-danger" style="background-color: #ED1C24; border-color: #ED1C24;">
+                <i class="fas fa-plus mr-1"></i> Maintenance Overview
+            </a>
         </div>
     </div>
 </div>
