updated my settings.py and views.py(Registration

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -25,8 +25,8 @@
   <meta name="twitter:image" content="{% static 'assets/img/coca-cola-logo.png' %}">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/coca-cola-logo.png' %}" rel="icon">
-  <link href="{% static 'assets/img/coca-cola-logo.png' %}" rel="apple-touch-icon"> 
+  <link href="{% static 'assets/img/logo.png'%}" rel="icon">
+  <link href="{% static 'assets/img/logo.png'%}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
