--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -31,6 +31,9 @@
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css'%}" rel="stylesheet">
   <link href="{% static 'assets/css/extra.css'%}" rel="stylesheet">
+
+  <link href="{% static 'assets/css/messages.css'%}" rel="stylesheet">
+  <script src="{% static 'assets/js/messages.js'%}"></script>
   
   <style>
     :root {
